Updates karma config name to the default

--- a/package.json
+++ b/package.json
@@ -45,6 +45,6 @@
   "main": "dist/index.js",
   "scripts": {
     "postinstall": "./node_modules/.bin/gulp setup",
-    "test": "./node_modules/karma/bin/karma start karma.config.js"
+    "test": "karma start"
   }
 }
