--- a/package.json
+++ b/package.json
@@ -12,35 +12,36 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "babel-core": "^6.3.13",
+    "babel-core": "^6.6.0",
+    "babel-eslint": "^4.1.8",
+    "babel-loader": "^6.2.4",
     "babel-plugin-add-module-exports": "^0.1.1",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.1.20",
-    "babel-plugin-transform-object-assign": "^6.3.13",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-stage-0": "^6.1.18",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.6.2",
+    "babel-plugin-transform-object-assign": "^6.5.0",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-stage-0": "^6.5.0",
     "del": "^1.2.0",
-    "event-stream": "^3.3.2",
-    "gulp": "^3.9.0",
-    "gulp-babel": "^6.1.1",
-    "gulp-util": "^3.0.7",
-    "gulp-concat": "^2.6.0",
-    "run-sequence": "^1.1.5",
-    "babel-eslint": "^4.1.6",
-    "eslint-plugin-react": "^3.11.3",
+    "es5-shim": "^4.5.7",
     "eslint-config-airbnb": "^2.0.0",
+    "eslint-plugin-flowtype": "^2.1.0",
+    "eslint-plugin-react": "^3.16.1",
+    "event-stream": "^3.3.2",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-concat": "^2.6.0",
     "gulp-eslint": "^1.1.1",
-    "babel-loader": "^6.2.0",
-    "webpack": "^1.12.9",
-    "phantomjs": "^1.9.19",
-    "karma": "^0.13.15",
-    "karma-jasmine": "^0.3.6",
-    "karma-phantomjs-launcher": "^0.2.1",
-    "karma-spec-reporter": "^0.0.23",
-    "karma-webpack": "^1.7.0",
+    "gulp-util": "^3.0.7",
     "jasmine": "^2.4.1 ",
     "jasmine-ajax": "^3.2.0",
-    "jasmine-expect": "^2.0.0-beta2",
-    "es5-shim": "^4.3.1"
+    "jasmine-expect": "^2.0.2",
+    "karma": "^0.13.21",
+    "karma-jasmine": "^0.3.7",
+    "karma-phantomjs-launcher": "^0.2.3",
+    "karma-spec-reporter": "^0.0.23",
+    "karma-webpack": "^1.7.0",
+    "phantomjs": "^1.9.19",
+    "run-sequence": "^1.1.5",
+    "webpack": "^1.12.14"
   },
   "main": "dist/index.js",
   "scripts": {
