--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-plugin-add-module-exports": "^0.1.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.7.0",
     "babel-plugin-transform-object-assign": "^6.5.0",
+    "babel-polyfill": "^6.7.2",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
     "del": "^1.2.0",
